--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 python-instagram==0.8.0
 flickrapi==1.4.2
+Flask==0.10.1
+Jinja2==2.7.1
+MarkupSafe==0.18
+Werkzeug==0.9.4
+itsdangerous==0.23
+wsgiref==0.1.2
+
